
message TemplightHeader {
  required uint32 version = 0;
  optional string source_file = 1;
}

message TemplightEntry {
  required bool is_begin = 0;
  
  enum InstantiationKind {
    TemplateInstantiation = 0;
    DefaultTemplateArgumentInstantiation = 1;
    DefaultFunctionArgumentInstantiation = 2;
    ExplicitTemplateArgumentSubstitution = 3;
    DeducedTemplateArgumentSubstitution = 4;
    PriorTemplateArgumentSubstitution = 5;
    DefaultTemplateArgumentChecking = 6;
    ExceptionSpecInstantiation = 7;
    Memoization = 8;
  }
  optional InstantiationKind kind = 1;
  optional string name = 2;
  
  message SourceLocation {
    required string file_name = 0;
    required uint32 line = 1;
    optional uint32 column = 2;
  }
  optional SourceLocation location = 3;
  
  optional double time_stamp = 4;
  optional uint64 memory_usage = 5;
}


message TemplightTrace {
  required TemplightHeader header = 0;
  repeated TemplightEntry entries = 1;
}
